# RedLayer

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: compliance.py  harness.py  schemas.py
backend/app/plugins/: detectors.py  probes.py
backend/authoring/: README.md  __init__.py  regenerate_content.py  scrub.py  tavily_client.py
backend/redteam/: .gitignore  FINDINGS.md  README.md  ivr-sim-turn.json  run-scan.sh
backend/redteam/results/: ivr-scan-full-2.hitlog.jsonl
backend/src/redlayer/: __init__.py
backend/src/redlayer/api/: __init__.py  app.py
backend/src/redlayer/core/: __init__.py  models.py  registry.py  scanner.py
backend/src/redlayer/verticals/: __init__.py  base.py
backend/src/redlayer/verticals/finance/: __init__.py  attempts.py  fixtures.py  grading.py  mitigations.py  target.py  vertical.py
backend/tests/: test_agent.py  test_api.py  test_authoring_firewall.py  test_compliance.py  test_detectors.py  test_finance_mitigation.py  test_harness.py  test_scrub.py  test_vertical_registry.py
docs/: architecture.md  backend-plan.md  backend-review-notes.md  backend-todo.md  frontend-gaps-steps-ai-orchestrated.md  frontend-plan.md  frontend-todo.md
docs/archive/accounts-payable-demo/: README.md  (+4 more)
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/mocks/: config.json  finding_001.json  findings.json  retest_blocked.json  scan_complete.json  scan_running.json
frontend/src/: App.tsx  api.ts  styles.css
pitch/: README.md  smb-loan-scan-demo-script.md
(+12 files in other folders)
