[project]
name = "redlayer"
version = "0.1.0"
description = "Deterministic prompt-injection red-team engine with pluggable domain verticals"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Web framework is intentionally unpinned until chosen (FastAPI vs Flask).
# Add it here, then implement src/redlayer/api/app.py.

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redlayer"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
